--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
 defusedxml==0.7.0rc1
+dj-database-url==0.5.0
 Django==3.0.8
 django-extensions==2.2.9
+django-heroku==0.3.1
 django-taggit==1.2.0
 easy-thumbnails==2.7
 gitdb==4.0.5
@@ -17,6 +19,7 @@ Markdown==3.2.2
 oauthlib==3.1.0
 Pillow==7.1.2
 pinocchio==0.4.2
+psycopg2==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 pyOpenSSL==19.1.0
